// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=1 _type="default" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert default kol-alert msg">
        <div class="kol-alert__heading">
          <kol-icon _icons="codicon codicon-comment" _label="kol-message" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__heading-content">
            <h1 class="headline headline-h1 kol-heading-wc">
              Überschrift
            </h1>
            <div class="kol-alert__content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=1 _type="error" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert error kol-alert msg">
        <div class="kol-alert__heading">
          <kol-icon _icons="codicon codicon-error" _label="kol-error" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__heading-content">
            <h1 class="headline headline-h1 kol-heading-wc">
              Überschrift
            </h1>
            <div class="kol-alert__content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=1 _type="info" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert info kol-alert msg">
        <div class="kol-alert__heading">
          <kol-icon _icons="codicon codicon-info" _label="kol-info" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__heading-content">
            <h1 class="headline headline-h1 kol-heading-wc">
              Überschrift
            </h1>
            <div class="kol-alert__content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=1 _type="success" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert kol-alert msg success">
        <div class="kol-alert__heading">
          <kol-icon _icons="codicon codicon-pass" _label="kol-success" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__heading-content">
            <h1 class="headline headline-h1 kol-heading-wc">
              Überschrift
            </h1>
            <div class="kol-alert__content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=1 _type="warning" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert kol-alert msg warning">
        <div class="kol-alert__heading">
          <kol-icon _icons="codicon codicon-warning" _label="kol-warning" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__heading-content">
            <h1 class="headline headline-h1 kol-heading-wc">
              Überschrift
            </h1>
            <div class="kol-alert__content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=2 _type="default" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert default kol-alert msg">
        <div class="kol-alert__heading">
          <kol-icon _icons="codicon codicon-comment" _label="kol-message" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__heading-content">
            <h2 class="headline headline-h2 kol-heading-wc">
              Überschrift
            </h2>
            <div class="kol-alert__content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=2 _type="error" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert error kol-alert msg">
        <div class="kol-alert__heading">
          <kol-icon _icons="codicon codicon-error" _label="kol-error" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__heading-content">
            <h2 class="headline headline-h2 kol-heading-wc">
              Überschrift
            </h2>
            <div class="kol-alert__content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=2 _type="info" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert info kol-alert msg">
        <div class="kol-alert__heading">
          <kol-icon _icons="codicon codicon-info" _label="kol-info" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__heading-content">
            <h2 class="headline headline-h2 kol-heading-wc">
              Überschrift
            </h2>
            <div class="kol-alert__content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=2 _type="success" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert kol-alert msg success">
        <div class="kol-alert__heading">
          <kol-icon _icons="codicon codicon-pass" _label="kol-success" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__heading-content">
            <h2 class="headline headline-h2 kol-heading-wc">
              Überschrift
            </h2>
            <div class="kol-alert__content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=2 _type="warning" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert kol-alert msg warning">
        <div class="kol-alert__heading">
          <kol-icon _icons="codicon codicon-warning" _label="kol-warning" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__heading-content">
            <h2 class="headline headline-h2 kol-heading-wc">
              Überschrift
            </h2>
            <div class="kol-alert__content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=3 _type="default" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert default kol-alert msg">
        <div class="kol-alert__heading">
          <kol-icon _icons="codicon codicon-comment" _label="kol-message" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__heading-content">
            <h3 class="headline headline-h3 kol-heading-wc">
              Überschrift
            </h3>
            <div class="kol-alert__content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=3 _type="error" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert error kol-alert msg">
        <div class="kol-alert__heading">
          <kol-icon _icons="codicon codicon-error" _label="kol-error" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__heading-content">
            <h3 class="headline headline-h3 kol-heading-wc">
              Überschrift
            </h3>
            <div class="kol-alert__content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=3 _type="info" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert info kol-alert msg">
        <div class="kol-alert__heading">
          <kol-icon _icons="codicon codicon-info" _label="kol-info" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__heading-content">
            <h3 class="headline headline-h3 kol-heading-wc">
              Überschrift
            </h3>
            <div class="kol-alert__content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=3 _type="success" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert kol-alert msg success">
        <div class="kol-alert__heading">
          <kol-icon _icons="codicon codicon-pass" _label="kol-success" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__heading-content">
            <h3 class="headline headline-h3 kol-heading-wc">
              Überschrift
            </h3>
            <div class="kol-alert__content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=3 _type="warning" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert kol-alert msg warning">
        <div class="kol-alert__heading">
          <kol-icon _icons="codicon codicon-warning" _label="kol-warning" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__heading-content">
            <h3 class="headline headline-h3 kol-heading-wc">
              Überschrift
            </h3>
            <div class="kol-alert__content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=4 _type="default" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert default kol-alert msg">
        <div class="kol-alert__heading">
          <kol-icon _icons="codicon codicon-comment" _label="kol-message" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__heading-content">
            <h4 class="headline headline-h4 kol-heading-wc">
              Überschrift
            </h4>
            <div class="kol-alert__content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=4 _type="error" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert error kol-alert msg">
        <div class="kol-alert__heading">
          <kol-icon _icons="codicon codicon-error" _label="kol-error" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__heading-content">
            <h4 class="headline headline-h4 kol-heading-wc">
              Überschrift
            </h4>
            <div class="kol-alert__content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=4 _type="info" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert info kol-alert msg">
        <div class="kol-alert__heading">
          <kol-icon _icons="codicon codicon-info" _label="kol-info" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__heading-content">
            <h4 class="headline headline-h4 kol-heading-wc">
              Überschrift
            </h4>
            <div class="kol-alert__content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=4 _type="success" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert kol-alert msg success">
        <div class="kol-alert__heading">
          <kol-icon _icons="codicon codicon-pass" _label="kol-success" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__heading-content">
            <h4 class="headline headline-h4 kol-heading-wc">
              Überschrift
            </h4>
            <div class="kol-alert__content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=4 _type="warning" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert kol-alert msg warning">
        <div class="kol-alert__heading">
          <kol-icon _icons="codicon codicon-warning" _label="kol-warning" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__heading-content">
            <h4 class="headline headline-h4 kol-heading-wc">
              Überschrift
            </h4>
            <div class="kol-alert__content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=5 _type="default" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert default kol-alert msg">
        <div class="kol-alert__heading">
          <kol-icon _icons="codicon codicon-comment" _label="kol-message" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__heading-content">
            <h5 class="headline headline-h5 kol-heading-wc">
              Überschrift
            </h5>
            <div class="kol-alert__content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=5 _type="error" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert error kol-alert msg">
        <div class="kol-alert__heading">
          <kol-icon _icons="codicon codicon-error" _label="kol-error" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__heading-content">
            <h5 class="headline headline-h5 kol-heading-wc">
              Überschrift
            </h5>
            <div class="kol-alert__content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=5 _type="info" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert info kol-alert msg">
        <div class="kol-alert__heading">
          <kol-icon _icons="codicon codicon-info" _label="kol-info" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__heading-content">
            <h5 class="headline headline-h5 kol-heading-wc">
              Überschrift
            </h5>
            <div class="kol-alert__content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=5 _type="success" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert kol-alert msg success">
        <div class="kol-alert__heading">
          <kol-icon _icons="codicon codicon-pass" _label="kol-success" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__heading-content">
            <h5 class="headline headline-h5 kol-heading-wc">
              Überschrift
            </h5>
            <div class="kol-alert__content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=5 _type="warning" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert kol-alert msg warning">
        <div class="kol-alert__heading">
          <kol-icon _icons="codicon codicon-warning" _label="kol-warning" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__heading-content">
            <h5 class="headline headline-h5 kol-heading-wc">
              Überschrift
            </h5>
            <div class="kol-alert__content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=6 _type="default" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert default kol-alert msg">
        <div class="kol-alert__heading">
          <kol-icon _icons="codicon codicon-comment" _label="kol-message" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__heading-content">
            <h6 class="headline headline-h6 kol-heading-wc">
              Überschrift
            </h6>
            <div class="kol-alert__content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=6 _type="error" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert error kol-alert msg">
        <div class="kol-alert__heading">
          <kol-icon _icons="codicon codicon-error" _label="kol-error" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__heading-content">
            <h6 class="headline headline-h6 kol-heading-wc">
              Überschrift
            </h6>
            <div class="kol-alert__content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=6 _type="info" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert info kol-alert msg">
        <div class="kol-alert__heading">
          <kol-icon _icons="codicon codicon-info" _label="kol-info" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__heading-content">
            <h6 class="headline headline-h6 kol-heading-wc">
              Überschrift
            </h6>
            <div class="kol-alert__content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=6 _type="success" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert kol-alert msg success">
        <div class="kol-alert__heading">
          <kol-icon _icons="codicon codicon-pass" _label="kol-success" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__heading-content">
            <h6 class="headline headline-h6 kol-heading-wc">
              Überschrift
            </h6>
            <div class="kol-alert__content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=6 _type="warning" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert kol-alert msg warning">
        <div class="kol-alert__heading">
          <kol-icon _icons="codicon codicon-warning" _label="kol-warning" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__heading-content">
            <h6 class="headline headline-h6 kol-heading-wc">
              Überschrift
            </h6>
            <div class="kol-alert__content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=1 _type="default" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert default kol-alert msg" role="alert">
        <div class="kol-alert__heading">
          <kol-icon _icons="codicon codicon-comment" _label="kol-message" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__heading-content">
            <h1 class="headline headline-h1 kol-heading-wc">
              Überschrift
            </h1>
            <div class="kol-alert__content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=1 _type="error" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert error kol-alert msg" role="alert">
        <div class="kol-alert__heading">
          <kol-icon _icons="codicon codicon-error" _label="kol-error" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__heading-content">
            <h1 class="headline headline-h1 kol-heading-wc">
              Überschrift
            </h1>
            <div class="kol-alert__content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=1 _type="info" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert info kol-alert msg" role="alert">
        <div class="kol-alert__heading">
          <kol-icon _icons="codicon codicon-info" _label="kol-info" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__heading-content">
            <h1 class="headline headline-h1 kol-heading-wc">
              Überschrift
            </h1>
            <div class="kol-alert__content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=1 _type="success" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert kol-alert msg success" role="alert">
        <div class="kol-alert__heading">
          <kol-icon _icons="codicon codicon-pass" _label="kol-success" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__heading-content">
            <h1 class="headline headline-h1 kol-heading-wc">
              Überschrift
            </h1>
            <div class="kol-alert__content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=1 _type="warning" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert kol-alert msg warning" role="alert">
        <div class="kol-alert__heading">
          <kol-icon _icons="codicon codicon-warning" _label="kol-warning" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__heading-content">
            <h1 class="headline headline-h1 kol-heading-wc">
              Überschrift
            </h1>
            <div class="kol-alert__content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=2 _type="default" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert default kol-alert msg" role="alert">
        <div class="kol-alert__heading">
          <kol-icon _icons="codicon codicon-comment" _label="kol-message" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__heading-content">
            <h2 class="headline headline-h2 kol-heading-wc">
              Überschrift
            </h2>
            <div class="kol-alert__content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=2 _type="error" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert error kol-alert msg" role="alert">
        <div class="kol-alert__heading">
          <kol-icon _icons="codicon codicon-error" _label="kol-error" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__heading-content">
            <h2 class="headline headline-h2 kol-heading-wc">
              Überschrift
            </h2>
            <div class="kol-alert__content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=2 _type="info" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert info kol-alert msg" role="alert">
        <div class="kol-alert__heading">
          <kol-icon _icons="codicon codicon-info" _label="kol-info" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__heading-content">
            <h2 class="headline headline-h2 kol-heading-wc">
              Überschrift
            </h2>
            <div class="kol-alert__content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=2 _type="success" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert kol-alert msg success" role="alert">
        <div class="kol-alert__heading">
          <kol-icon _icons="codicon codicon-pass" _label="kol-success" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__heading-content">
            <h2 class="headline headline-h2 kol-heading-wc">
              Überschrift
            </h2>
            <div class="kol-alert__content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=2 _type="warning" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert kol-alert msg warning" role="alert">
        <div class="kol-alert__heading">
          <kol-icon _icons="codicon codicon-warning" _label="kol-warning" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__heading-content">
            <h2 class="headline headline-h2 kol-heading-wc">
              Überschrift
            </h2>
            <div class="kol-alert__content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=3 _type="default" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert default kol-alert msg" role="alert">
        <div class="kol-alert__heading">
          <kol-icon _icons="codicon codicon-comment" _label="kol-message" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__heading-content">
            <h3 class="headline headline-h3 kol-heading-wc">
              Überschrift
            </h3>
            <div class="kol-alert__content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=3 _type="error" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert error kol-alert msg" role="alert">
        <div class="kol-alert__heading">
          <kol-icon _icons="codicon codicon-error" _label="kol-error" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__heading-content">
            <h3 class="headline headline-h3 kol-heading-wc">
              Überschrift
            </h3>
            <div class="kol-alert__content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=3 _type="info" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert info kol-alert msg" role="alert">
        <div class="kol-alert__heading">
          <kol-icon _icons="codicon codicon-info" _label="kol-info" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__heading-content">
            <h3 class="headline headline-h3 kol-heading-wc">
              Überschrift
            </h3>
            <div class="kol-alert__content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=3 _type="success" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert kol-alert msg success" role="alert">
        <div class="kol-alert__heading">
          <kol-icon _icons="codicon codicon-pass" _label="kol-success" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__heading-content">
            <h3 class="headline headline-h3 kol-heading-wc">
              Überschrift
            </h3>
            <div class="kol-alert__content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=3 _type="warning" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert kol-alert msg warning" role="alert">
        <div class="kol-alert__heading">
          <kol-icon _icons="codicon codicon-warning" _label="kol-warning" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__heading-content">
            <h3 class="headline headline-h3 kol-heading-wc">
              Überschrift
            </h3>
            <div class="kol-alert__content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=4 _type="default" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert default kol-alert msg" role="alert">
        <div class="kol-alert__heading">
          <kol-icon _icons="codicon codicon-comment" _label="kol-message" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__heading-content">
            <h4 class="headline headline-h4 kol-heading-wc">
              Überschrift
            </h4>
            <div class="kol-alert__content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=4 _type="error" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert error kol-alert msg" role="alert">
        <div class="kol-alert__heading">
          <kol-icon _icons="codicon codicon-error" _label="kol-error" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__heading-content">
            <h4 class="headline headline-h4 kol-heading-wc">
              Überschrift
            </h4>
            <div class="kol-alert__content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=4 _type="info" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert info kol-alert msg" role="alert">
        <div class="kol-alert__heading">
          <kol-icon _icons="codicon codicon-info" _label="kol-info" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__heading-content">
            <h4 class="headline headline-h4 kol-heading-wc">
              Überschrift
            </h4>
            <div class="kol-alert__content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=4 _type="success" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert kol-alert msg success" role="alert">
        <div class="kol-alert__heading">
          <kol-icon _icons="codicon codicon-pass" _label="kol-success" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__heading-content">
            <h4 class="headline headline-h4 kol-heading-wc">
              Überschrift
            </h4>
            <div class="kol-alert__content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=4 _type="warning" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert kol-alert msg warning" role="alert">
        <div class="kol-alert__heading">
          <kol-icon _icons="codicon codicon-warning" _label="kol-warning" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__heading-content">
            <h4 class="headline headline-h4 kol-heading-wc">
              Überschrift
            </h4>
            <div class="kol-alert__content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=5 _type="default" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert default kol-alert msg" role="alert">
        <div class="kol-alert__heading">
          <kol-icon _icons="codicon codicon-comment" _label="kol-message" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__heading-content">
            <h5 class="headline headline-h5 kol-heading-wc">
              Überschrift
            </h5>
            <div class="kol-alert__content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=5 _type="error" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert error kol-alert msg" role="alert">
        <div class="kol-alert__heading">
          <kol-icon _icons="codicon codicon-error" _label="kol-error" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__heading-content">
            <h5 class="headline headline-h5 kol-heading-wc">
              Überschrift
            </h5>
            <div class="kol-alert__content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=5 _type="info" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert info kol-alert msg" role="alert">
        <div class="kol-alert__heading">
          <kol-icon _icons="codicon codicon-info" _label="kol-info" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__heading-content">
            <h5 class="headline headline-h5 kol-heading-wc">
              Überschrift
            </h5>
            <div class="kol-alert__content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=5 _type="success" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert kol-alert msg success" role="alert">
        <div class="kol-alert__heading">
          <kol-icon _icons="codicon codicon-pass" _label="kol-success" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__heading-content">
            <h5 class="headline headline-h5 kol-heading-wc">
              Überschrift
            </h5>
            <div class="kol-alert__content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=5 _type="warning" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert kol-alert msg warning" role="alert">
        <div class="kol-alert__heading">
          <kol-icon _icons="codicon codicon-warning" _label="kol-warning" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__heading-content">
            <h5 class="headline headline-h5 kol-heading-wc">
              Überschrift
            </h5>
            <div class="kol-alert__content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=6 _type="default" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert default kol-alert msg" role="alert">
        <div class="kol-alert__heading">
          <kol-icon _icons="codicon codicon-comment" _label="kol-message" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__heading-content">
            <h6 class="headline headline-h6 kol-heading-wc">
              Überschrift
            </h6>
            <div class="kol-alert__content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=6 _type="error" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert error kol-alert msg" role="alert">
        <div class="kol-alert__heading">
          <kol-icon _icons="codicon codicon-error" _label="kol-error" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__heading-content">
            <h6 class="headline headline-h6 kol-heading-wc">
              Überschrift
            </h6>
            <div class="kol-alert__content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=6 _type="info" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert info kol-alert msg" role="alert">
        <div class="kol-alert__heading">
          <kol-icon _icons="codicon codicon-info" _label="kol-info" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__heading-content">
            <h6 class="headline headline-h6 kol-heading-wc">
              Überschrift
            </h6>
            <div class="kol-alert__content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=6 _type="success" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert kol-alert msg success" role="alert">
        <div class="kol-alert__heading">
          <kol-icon _icons="codicon codicon-pass" _label="kol-success" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__heading-content">
            <h6 class="headline headline-h6 kol-heading-wc">
              Überschrift
            </h6>
            <div class="kol-alert__content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=6 _type="warning" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert kol-alert msg warning" role="alert">
        <div class="kol-alert__heading">
          <kol-icon _icons="codicon codicon-warning" _label="kol-warning" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__heading-content">
            <h6 class="headline headline-h6 kol-heading-wc">
              Überschrift
            </h6>
            <div class="kol-alert__content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;
